# corto

./: .gitignore  LICENSE  README.md  WIP.txt  pytest.ini  requirements.txt  setup.cfg
cortopy/: _Body.py  _Camera.py  _Compositing.py  _DataProcessing.py  _Environment.py  _LiDAR.py  _Model.py  _PostPro.py  _PrettyType.py  _Renderering.py  _Rendering.py  _Shading.py  _State.py  _StructuredLight.py  _Sun.py  _Template.py  _TimeOfFlight.py  _Utils.py  __init__.py  corto_diskFunctions.osl  corto_phaseFunctions.osl
data/: README.txt
demos/: demo_GenerateCloud_input.py  demo_renderingBlender.py  prova.py
input/: ALL.txt  README.md
monet/: MONET_v1.py  main_MONET.py  readme.txt
scripts/: AddArtificialNoise.py  CORTO_to_Simulink_HF_1_a.py  CORTO_to_Simulink_HF_1_b.py  CORTO_to_Simulink_HF_1_c.py  Calibration.py  PostProcess_Eq_DB.py  PostProcess_Eq_DB_step1.py  PostProcess_Eq_DB_step2.py  Rend_Eq_DB.py  RenderFromTxt.py  create_json.py  demo_GenerateCloud_input.py  demo_PostProcess.py  save_UV_data_as_json.py  save_material_as_json.py  test_noise.py  util_long_runs.py  visualize_EXR.py
tutorials/: S00_Calibration.py  S01_Eros.py  S01a_Eros.py  S01b_Eros.py  S02_Itokawa.py  S03_Apophis.py  S04_Bennu.py  S05_Didymos.py  S05_Didymos_Milani.py  S05a_Didymos_Milani.py  S05b_Didymos.py  S06_Moon.py  S06a_Moon.py  S06b_Moon.py  S07_Mars_Phobos_Deimos.py  S07a_Mars_Phobos_Deimos.py  S07b_Mars_Phobos_Deimos_optimized.py  S08_Earth  S08_Earth.py  S09_Frankenstein_Asteroids.py  S10_Spacecraft.py  advanced_CIL_ClosedLoop.py  advanced_CIL_ClosedLoop_remote_Client.py  scene.json  (+16 more)
(+18 files in other folders)
