[metadata]
name = cortopy
version = attr: cortopy._version.__version__
author = Mattia Pugliatti
description = Celestial Object Rendering TOol (CORTO) is a bundle of codes that can be used to generate synthetic images-label pairs of celestial bodies.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MattiaPugliatti/corto
classifiers =
    Development Status :: 4 - Beta
    Natural Language :: English
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X

[options]
packages = cortopy
python_requires = >=3.11
install_requires =
    numpy>=1.20.0
    matplotlib
    scipy
    datetime